# DAVID

./: README.md  command.txt  db.sqlite3  pyproject.toml
David/: settings.py  urls.py
David/templates/event/: base.html
event/: models.py  urls.py  views.py
event/migrations/: 0001_initial.py
event/templates/event/: event.html
event_api/: serializers.py  urls.py  views.py
