[tool.poetry]
name = "David"
version = "0.1.0"
description = "This is the backend for EventPlus NG Web Application"
authors = ["Adesegun Adesola ADEBOYE"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
black = "^21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
